--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                     <h2>Purpose of Digital PR Service</h2>
                     <p>The primary purposes of a solid digital PR firm like SEOAce links are:</p>
                     <ul>
-                        · <li> Publishing in Online media.</li>
-                        · <li> Significant online presence</li>
-                        · <li>Optimize social media to enhance growth.</li>
+                        <li> Publishing in Online media.</li>
+                        <li> Significant online presence</li>
+                        <li> Optimize social media to enhance growth.</li>
                     </ul>
 
                     <h2>Actions under Digital PR Service</h2>
@@ -136,38 +136,38 @@
                         It can enable the company to scale higher steps in the long run. Some of the different actions
                         SEOAce links takes involve:</p>
                     <ul>
-                        · <li><b>Press Releases</b>—Press releases are necessary for a significant media presence.
+                        <li> <b>Press Releases</b> — Press releases are necessary for a significant media presence.
                             SEOAce links can generate press releases for the best publishing centers, which can attract
                             investors and enhance growth.</li>
-                        · <li><b>Relationships</b>—SEOAce links maintains close associations with major journalists and
+                        <li> <b>Relationships</b> — SEOAce links maintains close associations with major journalists and
                             media houses. These contacts are vital to projecting a positive image of the company to the
                             public.</li>
-                        · <li><b>Marketing</b>- SEOAce links uses social media's power and visibility to their clients'
+                        <li> <b>Marketing</b>- SEOAce links uses social media's power and visibility to their clients'
                             advantage. It reaches out to influencers for marketing products, an alternative step away
                             from popular media. Doing marketing this way ensures that the company stays in the social
                             media loop.</li>
-                        · <li><b>Backlinking</b>- SEOAce links utilizes the power of guest posting with relatively good
+                        <li> <b>Backlinking</b>- SEOAce links utilizes the power of guest posting with relatively good
                             SEO. They maintain contact with leading companies across different industries. This helps
                             them provide excellent backlinks for their clients' websites, thereby giving them more
                             visibility.</li>
-                        · <li><b>Interviews</b>- As a leading Digital PR service, SEOAce links can organize interviews
+                        <li> <b>Interviews</b>- As a leading Digital PR service, SEOAce links can organize interviews
                             with clients with leading media houses. This enhances the public's accessibility to the
                             company.</li>
 
                         <p>Advantages of SEOAce links</p>
-                        · <li><b>Traffic</b>—The major advantage any Digital PR Service can boast about is their promise
+                        <li> <b>Traffic</b> — The major advantage any Digital PR Service can boast about is their promise
                             to generate the necessary traffic to their client's website. SEOAce links, through its
                             efficiency in creating strong backlinks, ensures that this is done promptly.</li>
-                        · <li><b>SEO Ranking</b>- With the kind of contacts and connections under SEOAce links, any
+                        <li> <b>SEO Ranking</b>- With the kind of contacts and connections under SEOAce links, any
                             content can top SEO rankings and generate traffic.</li>
-                        · <li><b>Authority</b>—Through proper marketing strategies and optimization, SEOAce links
+                        <li> <b>Authority</b> — Through proper marketing strategies and optimization, SEOAce links
                             positions its clients as authoritative voices in the industry they are in, increasing the
                             company's credibility within the industry.</li>
-                        · <li><b>Brand Image</b>—SEOAce links's ultimate aim is to increase the brand image of its
+                        <li> <b>Brand Image</b> — SEOAce links's ultimate aim is to increase the brand image of its
                             clients. It offers customized strategies through which clients can reach out to a wider
                             audience. Naturally, with increasing brand image, the trust between the customer and the
                             client grows.</li>
-                        · <li><b>Pricing</b>—Digital PR Services like SEOAce links are not costly. They offer their
+                        <li> <b>Pricing</b> — Digital PR Services like SEOAce links are not costly. They offer their
                             services at a reasonable cost, but they ensure that the desired result is achieved.</li>
                     </ul>
 
@@ -175,13 +175,13 @@
                     <p>A few strategies utilized by SEOAce links as a Digital PR Service in optimizing the company name
                         in the digital media include:</p>
                     <ul>
-                        · <li><b>Infographics</b>- Visual information is the most convincing way to lure people to the
+                        <li> <b>Infographics</b>- Visual information is the most convincing way to lure people to the
                             brand. SEOAce links offers immense expertise in this area.</li>
-                        · <li><b>Guest Blogs</b>—SEOAce links has an expansive list of websites with a good readership.
+                        <li> <b>Guest Blogs</b> — SEOAce links has an expansive list of websites with a good readership.
                             Their guest posts can quickly generate the desired amount of traffic to the website.</li>
-                        · <li><b>Social media</b>- SEOAce links can also provide social media posts for their clients
+                        <li> <b>Social media</b>- SEOAce links can also provide social media posts for their clients
                             with proper optimization.</li>
-                        · <li><b>Short video</b>- Short videos cater to the purpose at hand. SEOAce links can provide a
+                        <li> <b>Short video</b>- Short videos cater to the purpose at hand. SEOAce links can provide a
                             large set of information in a condensed form to the people. </li>
                     </ul>
 
